--- a/doc/Documentazione.tex
+++ b/doc/Documentazione.tex
@@ -316,6 +316,30 @@ Insieme a questo documento in formato PDF viene fornito anche il codice \LaTeX  
         \end{center}
 
 \newpage
+    \subsection{Sequence Diagram}
+    \subsubsection*{Chiamate della View del ReportForm}
+        \begin{center}
+            \includegraphics[width=1\textwidth]{pictures/Report1.png}
+        \captionof{figure}{}
+        \end{center}
+    \newpage
+    \begin{center}
+        \includegraphics[width=1\textwidth]{pictures/Report2.png}
+    \captionof{figure}{}
+    \end{center}
+    \newpage
+    \begin{center}
+        \includegraphics[width=1\textwidth]{pictures/Report3.png}
+    \captionof{figure}{}
+    \end{center}
+    \newpage
+    \subsubsection*{Chiamate della View del ControlPhaseForm}
+    \begin{center}
+        \includegraphics[width=1\textwidth]{pictures/prova.png}
+    \captionof{figure}{}
+    \end{center}
+
+\newpage
     \section{Implementazione del DataBase}
     Come richiesto dalla traccia si è implementato un database con cui l'applicazione potesse interagire.\\
     Il Database è stato creato sulla base dell'ER qui riportato:
