added sequence diagram

--- a/doc/Documentazione.tex
+++ b/doc/Documentazione.tex
@@ -16,6 +16,7 @@
 \usepackage{soulutf8}
 \usepackage{epigraph}
 \usepackage{amssymb}
+\usepackage[export]{adjustbox}
 \usepackage{amsmath}
 
 \pagestyle{fancy}
@@ -67,9 +68,8 @@ La presente è la documentazione del progetto del corso di Ingegneria del Softwa
 Insieme a questo documento in formato PDF viene fornito anche il codice \LaTeX  con cui è stato generato.
 \tableofcontents
 \thispagestyle{empty}
-\newpage
-\thispagestyle{empty}
 
+\newpage
     \section{Traccia dell'Elaborato}
     Riportiamo di seguito la traccia dell'elaborato:
         \begin{quotation}
@@ -317,23 +317,18 @@ Insieme a questo documento in formato PDF viene fornito anche il codice \LaTeX  
 
 \newpage
     \subsection{Sequence Diagram}
-    \subsubsection*{Chiamate della View del ReportForm}
-        \begin{center}
-            \includegraphics[width=1\textwidth]{pictures/Report1.png}
-        \captionof{figure}{}
-        \end{center}
+    \subsubsection*{Chiamate della View del PatientInfo nel metodo getView}
+    \begin{center}
+        \includegraphics[width=0.90\textwidth]{pictures/prova_001.png}
+    \end{center}
+
     \newpage
     \begin{center}
-        \includegraphics[width=1\textwidth]{pictures/Report2.png}
-    \captionof{figure}{}
+        \includegraphics[width=0.90\textwidth]{pictures/prova_002.png}
     \end{center}
+
     \newpage
-    \begin{center}
-        \includegraphics[width=1\textwidth]{pictures/Report3.png}
-    \captionof{figure}{}
-    \end{center}
-    \newpage
-    \subsubsection*{Chiamate della View del ControlPhaseForm}
+    \subsubsection*{Chiamate della View del ControlPhaseForm nel metodo getView}
     \begin{center}
         \includegraphics[width=1\textwidth]{pictures/prova.png}
     \captionof{figure}{}
