made table of contents linked

--- a/doc/Documentazione.tex
+++ b/doc/Documentazione.tex
@@ -18,6 +18,14 @@
 \usepackage{amssymb}
 \usepackage[export]{adjustbox}
 \usepackage{amsmath}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
 
 \pagestyle{fancy}
 \fancyhf{}
