fixed error with links

--- a/doc/Documentazione.tex
+++ b/doc/Documentazione.tex
@@ -3,7 +3,6 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
-\usepackage{caption}
 \usepackage[labelfont=bf]{caption}
 \usepackage{booktabs, siunitx}
 \usepackage{tikz}
@@ -18,14 +17,9 @@
 \usepackage{amssymb}
 \usepackage[export]{adjustbox}
 \usepackage{amsmath}
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks,
-    citecolor=black,
-    filecolor=black,
-    linkcolor=black,
-    urlcolor=black
-}
+\usepackage[hidelinks]{hyperref}
+\usepackage{hypcap}
+
 
 \pagestyle{fancy}
 \fancyhf{}
